instruments fixed on mobile

--- a/smallslive/static/sass/pages/_search.scss
+++ b/smallslive/static/sass/pages/_search.scss
@@ -615,6 +615,12 @@ body.headers-1 {
   }
 }
 
+@media (max-width: 1023px) {
+  #musicianContent {
+    height: 100vh;
+  }
+}
+
 #musicianContent .artist-arrows {
   position: absolute;
   width: auto;
